--- a/quanlykhoaluan/pom.xml
+++ b/quanlykhoaluan/pom.xml
@@ -93,6 +93,11 @@
             <artifactId>spring-orm</artifactId>
             <version>5.3.28</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tiles</groupId>
+            <artifactId>tiles-extras</artifactId>
+            <version>3.0.8</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -102,8 +107,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <compilerArguments>
                         <endorseddirs>${endorsed.dir}</endorseddirs>
                     </compilerArguments>
