--- a/quanlykhoaluan/src/main/resources/configs.properties
+++ b/quanlykhoaluan/src/main/resources/configs.properties
@@ -4,3 +4,6 @@
 
 
 PAGE_SIZE = 4
+cloudinary.cloud_name=dtlqyvkvu
+cloudinary.api_key=654129736974748
+cloudinary.api_secret=CPi-rz8Bl-s9WY9fV-39VhOxRAQ
