--- a/quanlykhoaluan/src/main/resources/databases.properties
+++ b/quanlykhoaluan/src/main/resources/databases.properties
@@ -6,6 +6,6 @@
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
 hibernate.showSql = true
 hibernate.connection.driverClass=com.mysql.cj.jdbc.Driver
-hibernate.connection.url=jdbc:mysql://localhost:3306/quanlykhoaluan
+hibernate.connection.url=jdbc:mysql://localhost:3306/quanlykhoaluan2?useUnicode=yes&characterEncoding=UTF-8
 hibernate.connection.username=root
 hibernate.connection.password=123456
