--- a/quanlykhoaluan/pom.xml
+++ b/quanlykhoaluan/pom.xml
@@ -166,6 +166,11 @@
             <artifactId>joda-time</artifactId>
             <version>2.3</version>
         </dependency>
+<!--        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.2.8.RELEASE</version>
+        </dependency>-->
     </dependencies>
 
     <build>
