--- a/quanlykhoaluan/pom.xml
+++ b/quanlykhoaluan/pom.xml
@@ -166,11 +166,17 @@
             <artifactId>joda-time</artifactId>
             <version>2.3</version>
         </dependency>
-<!--        <dependency>
+        <!--        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>5.2.8.RELEASE</version>
         </dependency>-->
+        <dependency>
+            <groupId>com.lowagie</groupId>
+            <artifactId>itext</artifactId>
+            <version>2.1.7</version>
+        </dependency>
+
     </dependencies>
 
     <build>
